// Vitest Snapshot v1

exports[`accent atom 1`] = `
VStackBox {
  "align": undefined,
  "atom": AccentAtom {
    "accent": SymAtom {
      "char": "^",
      "charBox": true,
      "elem": null,
      "fonts": [
        "Main-R",
      ],
      "kind": "ord",
      "parent": null,
    },
    "body": GroupAtom {
      "body": [
        SymAtom {
          "char": "j",
          "charBox": true,
          "elem": null,
          "fonts": [
            "Math-I",
          ],
          "kind": "ord",
          "parent": [Circular],
        },
      ],
      "editable": false,
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
    "elem": null,
    "kind": "ord",
    "parent": null,
  },
  "children": [
    SymBox {
      "atom": SymAtom {
        "char": "^",
        "charBox": true,
        "elem": null,
        "fonts": [
          "Main-R",
        ],
        "kind": "ord",
        "parent": null,
      },
      "char": "^",
      "font": "Main-R",
      "italic": 0,
      "multiplier": undefined,
      "rect": {
        "depth": 0,
        "height": 0.69444,
        "width": 0.5,
      },
      "space": {
        "bottom": -0.431,
      },
    },
    HBox {
      "atom": GroupAtom {
        "body": [
          SymAtom {
            "char": "j",
            "charBox": true,
            "elem": null,
            "fonts": [
              "Math-I",
            ],
            "kind": "ord",
            "parent": [Circular],
          },
        ],
        "editable": false,
        "elem": null,
        "kind": "ord",
        "parent": AccentAtom {
          "accent": SymAtom {
            "char": "^",
            "charBox": true,
            "elem": null,
            "fonts": [
              "Main-R",
            ],
            "kind": "ord",
            "parent": null,
          },
          "body": [Circular],
          "elem": null,
          "kind": "ord",
          "parent": null,
        },
      },
      "children": [
        SymBox {
          "atom": SymAtom {
            "char": "j",
            "charBox": true,
            "elem": null,
            "fonts": [
              "Math-I",
            ],
            "kind": "ord",
            "parent": GroupAtom {
              "body": [
                [Circular],
              ],
              "editable": false,
              "elem": null,
              "kind": "ord",
              "parent": AccentAtom {
                "accent": SymAtom {
                  "char": "^",
                  "charBox": true,
                  "elem": null,
                  "fonts": [
                    "Main-R",
                  ],
                  "kind": "ord",
                  "parent": null,
                },
                "body": [Circular],
                "elem": null,
                "kind": "ord",
                "parent": null,
              },
            },
          },
          "char": "j",
          "font": "Math-I",
          "italic": 0.05724,
          "multiplier": undefined,
          "rect": {
            "depth": 0.19444,
            "height": 0.65952,
            "width": 0.46905,
          },
          "space": {},
        },
      ],
      "multiplier": undefined,
      "rect": {
        "depth": 0.19444,
        "height": 0.65952,
        "width": 0.46905,
      },
      "space": {},
    },
  ],
  "multiplier": undefined,
  "newDepth": 0.19444,
  "rect": {
    "depth": 0.19444,
    "height": 0.92296,
    "width": 0.5,
  },
  "shift": -0,
  "space": {},
}
`;

exports[`frac atom 1`] = `
VBox {
  "align": undefined,
  "atom": FracAtom {
    "denom": GroupAtom {
      "body": [
        SymAtom {
          "char": "j",
          "charBox": true,
          "elem": null,
          "fonts": [
            "Math-I",
          ],
          "kind": "ord",
          "parent": [Circular],
        },
      ],
      "editable": false,
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
    "elem": null,
    "kind": "ord",
    "numer": GroupAtom {
      "body": [
        SymAtom {
          "char": "j",
          "charBox": true,
          "elem": null,
          "fonts": [
            "Math-I",
          ],
          "kind": "ord",
          "parent": GroupAtom {
            "body": [
              [Circular],
            ],
            "editable": false,
            "elem": null,
            "kind": "ord",
            "parent": [Circular],
          },
        },
      ],
      "editable": false,
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
    "parent": null,
  },
  "children": [
    {
      "box": HBox {
        "atom": GroupAtom {
          "body": [
            SymAtom {
              "char": "j",
              "charBox": true,
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": GroupAtom {
                "body": [
                  [Circular],
                ],
                "editable": false,
                "elem": null,
                "kind": "ord",
                "parent": FracAtom {
                  "denom": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "numer": [Circular],
                  "parent": null,
                },
              },
            },
          ],
          "editable": false,
          "elem": null,
          "kind": "ord",
          "parent": FracAtom {
            "denom": GroupAtom {
              "body": [
                SymAtom {
                  "char": "j",
                  "charBox": true,
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": [Circular],
                },
              ],
              "editable": false,
              "elem": null,
              "kind": "ord",
              "parent": [Circular],
            },
            "elem": null,
            "kind": "ord",
            "numer": [Circular],
            "parent": null,
          },
        },
        "children": [
          SymBox {
            "atom": SymAtom {
              "char": "j",
              "charBox": true,
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": GroupAtom {
                "body": [
                  [Circular],
                ],
                "editable": false,
                "elem": null,
                "kind": "ord",
                "parent": FracAtom {
                  "denom": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "numer": GroupAtom {
                    "body": [
                      [Circular],
                    ],
                    "editable": false,
                    "elem": null,
                    "kind": "ord",
                    "parent": [Circular],
                  },
                  "parent": null,
                },
              },
            },
            "char": "j",
            "font": "Math-I",
            "italic": 0.05724,
            "multiplier": undefined,
            "rect": {
              "depth": 0.19444,
              "height": 0.65952,
              "width": 0.46905,
            },
            "space": {},
          },
        ],
        "multiplier": undefined,
        "rect": {
          "depth": 0.19444,
          "height": 0.65952,
          "width": 0.46905,
        },
        "space": {},
      },
      "shift": 0.677,
    },
    {
      "box": RectBox {
        "atom": undefined,
        "multiplier": undefined,
        "rect": {
          "depth": 0,
          "height": 0.04,
          "width": 0,
        },
        "space": {},
      },
      "shift": 0.23,
    },
    {
      "box": HBox {
        "atom": GroupAtom {
          "body": [
            SymAtom {
              "char": "j",
              "charBox": true,
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": [Circular],
            },
          ],
          "editable": false,
          "elem": null,
          "kind": "ord",
          "parent": FracAtom {
            "denom": [Circular],
            "elem": null,
            "kind": "ord",
            "numer": GroupAtom {
              "body": [
                SymAtom {
                  "char": "j",
                  "charBox": true,
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": [Circular],
                },
              ],
              "editable": false,
              "elem": null,
              "kind": "ord",
              "parent": [Circular],
            },
            "parent": null,
          },
        },
        "children": [
          SymBox {
            "atom": SymAtom {
              "char": "j",
              "charBox": true,
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": GroupAtom {
                "body": [
                  [Circular],
                ],
                "editable": false,
                "elem": null,
                "kind": "ord",
                "parent": FracAtom {
                  "denom": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "numer": GroupAtom {
                    "body": [
                      [Circular],
                    ],
                    "editable": false,
                    "elem": null,
                    "kind": "ord",
                    "parent": [Circular],
                  },
                  "parent": null,
                },
              },
            },
            "char": "j",
            "font": "Math-I",
            "italic": 0.05724,
            "multiplier": undefined,
            "rect": {
              "depth": 0.19444,
              "height": 0.65952,
              "width": 0.46905,
            },
            "space": {},
          },
        ],
        "multiplier": undefined,
        "rect": {
          "depth": 0.19444,
          "height": 0.65952,
          "width": 0.46905,
        },
        "space": {},
      },
      "shift": -0.686,
    },
  ],
  "multiplier": undefined,
  "rect": {
    "depth": 0.8804400000000001,
    "height": 1.3365200000000002,
    "width": 0.9381,
  },
  "space": {},
}
`;

exports[`leftright atom 1`] = `
HBox {
  "atom": LRAtom {
    "body": GroupAtom {
      "body": [
        SymAtom {
          "char": "j",
          "charBox": true,
          "elem": null,
          "fonts": [
            "Math-I",
          ],
          "kind": "ord",
          "parent": [Circular],
        },
      ],
      "editable": false,
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
    "elem": null,
    "kind": "inner",
    "left": SymAtom {
      "char": "(",
      "charBox": true,
      "elem": null,
      "fonts": [
        "Main-R",
      ],
      "kind": "open",
      "parent": null,
    },
    "parent": null,
    "right": SymAtom {
      "char": ")",
      "charBox": true,
      "elem": null,
      "fonts": [
        "Main-R",
      ],
      "kind": "open",
      "parent": null,
    },
  },
  "children": [
    SymBox {
      "atom": SymAtom {
        "char": "(",
        "charBox": true,
        "elem": null,
        "fonts": [
          "Main-R",
        ],
        "kind": "open",
        "parent": null,
      },
      "char": "(",
      "font": "Main-R",
      "italic": 0,
      "multiplier": undefined,
      "rect": {
        "depth": 0.25,
        "height": 0.75,
        "width": 0.38889,
      },
      "space": {},
    },
    HBox {
      "atom": GroupAtom {
        "body": [
          SymAtom {
            "char": "j",
            "charBox": true,
            "elem": null,
            "fonts": [
              "Math-I",
            ],
            "kind": "ord",
            "parent": [Circular],
          },
        ],
        "editable": false,
        "elem": null,
        "kind": "ord",
        "parent": LRAtom {
          "body": [Circular],
          "elem": null,
          "kind": "inner",
          "left": SymAtom {
            "char": "(",
            "charBox": true,
            "elem": null,
            "fonts": [
              "Main-R",
            ],
            "kind": "open",
            "parent": null,
          },
          "parent": null,
          "right": SymAtom {
            "char": ")",
            "charBox": true,
            "elem": null,
            "fonts": [
              "Main-R",
            ],
            "kind": "open",
            "parent": null,
          },
        },
      },
      "children": [
        SymBox {
          "atom": SymAtom {
            "char": "j",
            "charBox": true,
            "elem": null,
            "fonts": [
              "Math-I",
            ],
            "kind": "ord",
            "parent": GroupAtom {
              "body": [
                [Circular],
              ],
              "editable": false,
              "elem": null,
              "kind": "ord",
              "parent": LRAtom {
                "body": [Circular],
                "elem": null,
                "kind": "inner",
                "left": SymAtom {
                  "char": "(",
                  "charBox": true,
                  "elem": null,
                  "fonts": [
                    "Main-R",
                  ],
                  "kind": "open",
                  "parent": null,
                },
                "parent": null,
                "right": SymAtom {
                  "char": ")",
                  "charBox": true,
                  "elem": null,
                  "fonts": [
                    "Main-R",
                  ],
                  "kind": "open",
                  "parent": null,
                },
              },
            },
          },
          "char": "j",
          "font": "Math-I",
          "italic": 0.05724,
          "multiplier": undefined,
          "rect": {
            "depth": 0.19444,
            "height": 0.65952,
            "width": 0.46905,
          },
          "space": {},
        },
      ],
      "multiplier": undefined,
      "rect": {
        "depth": 0.19444,
        "height": 0.65952,
        "width": 0.46905,
      },
      "space": {},
    },
    SymBox {
      "atom": SymAtom {
        "char": ")",
        "charBox": true,
        "elem": null,
        "fonts": [
          "Main-R",
        ],
        "kind": "open",
        "parent": null,
      },
      "char": ")",
      "font": "Main-R",
      "italic": 0,
      "multiplier": undefined,
      "rect": {
        "depth": 0.25,
        "height": 0.75,
        "width": 0.38889,
      },
      "space": {},
    },
  ],
  "multiplier": undefined,
  "rect": {
    "depth": 0.25,
    "height": 0.75,
    "width": 1.24683,
  },
  "space": {},
}
`;

exports[`matrix atom 1`] = `
HBox {
  "atom": MatrixAtom {
    "children": [
      [
        GroupAtom {
          "body": [
            SymAtom {
              "char": "j",
              "charBox": true,
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": [Circular],
            },
          ],
          "editable": false,
          "elem": null,
          "kind": "ord",
          "parent": [Circular],
        },
        GroupAtom {
          "body": [
            SymAtom {
              "char": "j",
              "charBox": true,
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": [Circular],
            },
          ],
          "editable": false,
          "elem": null,
          "kind": "ord",
          "parent": [Circular],
        },
      ],
      [
        GroupAtom {
          "body": [
            SymAtom {
              "char": "j",
              "charBox": true,
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": [Circular],
            },
          ],
          "editable": false,
          "elem": null,
          "kind": "ord",
          "parent": [Circular],
        },
      ],
    ],
    "elem": null,
    "kind": "inner",
    "parent": null,
    "type": "pmatrix",
  },
  "children": [
    SymBox {
      "atom": SymAtom {
        "char": "(",
        "charBox": true,
        "elem": null,
        "fonts": [
          "Size3",
        ],
        "kind": "open",
        "parent": null,
      },
      "char": "(",
      "font": "Size3",
      "italic": 0,
      "multiplier": undefined,
      "rect": {
        "depth": 0.95003,
        "height": 1.45,
        "width": 0.73611,
      },
      "space": {},
    },
    HBox {
      "atom": undefined,
      "children": [
        VBox {
          "align": undefined,
          "atom": undefined,
          "children": [
            {
              "box": HBox {
                "atom": GroupAtom {
                  "body": [
                    SymAtom {
                      "char": "j",
                      "charBox": true,
                      "elem": null,
                      "fonts": [
                        "Math-I",
                      ],
                      "kind": "ord",
                      "parent": [Circular],
                    },
                  ],
                  "editable": false,
                  "elem": null,
                  "kind": "ord",
                  "parent": MatrixAtom {
                    "children": [
                      [
                        [Circular],
                        [Circular],
                      ],
                      [
                        [Circular],
                      ],
                    ],
                    "elem": null,
                    "kind": "inner",
                    "parent": null,
                    "type": "pmatrix",
                  },
                },
                "children": [
                  SymBox {
                    "atom": SymAtom {
                      "char": "j",
                      "charBox": true,
                      "elem": null,
                      "fonts": [
                        "Math-I",
                      ],
                      "kind": "ord",
                      "parent": GroupAtom {
                        "body": [
                          [Circular],
                        ],
                        "editable": false,
                        "elem": null,
                        "kind": "ord",
                        "parent": MatrixAtom {
                          "children": [
                            [
                              [Circular],
                              [Circular],
                            ],
                            [
                              [Circular],
                            ],
                          ],
                          "elem": null,
                          "kind": "inner",
                          "parent": null,
                          "type": "pmatrix",
                        },
                      },
                    },
                    "char": "j",
                    "font": "Math-I",
                    "italic": 0.05724,
                    "multiplier": undefined,
                    "rect": {
                      "depth": 0.19444,
                      "height": 0.65952,
                      "width": 0.46905,
                    },
                    "space": {},
                  },
                ],
                "multiplier": undefined,
                "rect": {
                  "depth": 0.19444,
                  "height": 0.65952,
                  "width": 0.46905,
                },
                "space": {},
              },
              "shift": 0.6099999999999999,
            },
            {
              "box": HBox {
                "atom": GroupAtom {
                  "body": [
                    SymAtom {
                      "char": "j",
                      "charBox": true,
                      "elem": null,
                      "fonts": [
                        "Math-I",
                      ],
                      "kind": "ord",
                      "parent": [Circular],
                    },
                  ],
                  "editable": false,
                  "elem": null,
                  "kind": "ord",
                  "parent": MatrixAtom {
                    "children": [
                      [
                        [Circular],
                        [Circular],
                      ],
                      [
                        [Circular],
                      ],
                    ],
                    "elem": null,
                    "kind": "inner",
                    "parent": null,
                    "type": "pmatrix",
                  },
                },
                "children": [
                  SymBox {
                    "atom": SymAtom {
                      "char": "j",
                      "charBox": true,
                      "elem": null,
                      "fonts": [
                        "Math-I",
                      ],
                      "kind": "ord",
                      "parent": GroupAtom {
                        "body": [
                          [Circular],
                        ],
                        "editable": false,
                        "elem": null,
                        "kind": "ord",
                        "parent": MatrixAtom {
                          "children": [
                            [
                              [Circular],
                              [Circular],
                            ],
                            [
                              [Circular],
                            ],
                          ],
                          "elem": null,
                          "kind": "inner",
                          "parent": null,
                          "type": "pmatrix",
                        },
                      },
                    },
                    "char": "j",
                    "font": "Math-I",
                    "italic": 0.05724,
                    "multiplier": undefined,
                    "rect": {
                      "depth": 0.19444,
                      "height": 0.65952,
                      "width": 0.46905,
                    },
                    "space": {},
                  },
                ],
                "multiplier": undefined,
                "rect": {
                  "depth": 0.19444,
                  "height": 0.65952,
                  "width": 0.46905,
                },
                "space": {},
              },
              "shift": -0.5900000000000001,
            },
          ],
          "multiplier": undefined,
          "rect": {
            "depth": 0.78444,
            "height": 1.26952,
            "width": 0.9381,
          },
          "space": {
            "right": 0.5,
          },
        },
        VBox {
          "align": undefined,
          "atom": undefined,
          "children": [
            {
              "box": HBox {
                "atom": GroupAtom {
                  "body": [
                    SymAtom {
                      "char": "j",
                      "charBox": true,
                      "elem": null,
                      "fonts": [
                        "Math-I",
                      ],
                      "kind": "ord",
                      "parent": [Circular],
                    },
                  ],
                  "editable": false,
                  "elem": null,
                  "kind": "ord",
                  "parent": MatrixAtom {
                    "children": [
                      [
                        [Circular],
                        [Circular],
                      ],
                      [
                        [Circular],
                      ],
                    ],
                    "elem": null,
                    "kind": "inner",
                    "parent": null,
                    "type": "pmatrix",
                  },
                },
                "children": [
                  SymBox {
                    "atom": SymAtom {
                      "char": "j",
                      "charBox": true,
                      "elem": null,
                      "fonts": [
                        "Math-I",
                      ],
                      "kind": "ord",
                      "parent": GroupAtom {
                        "body": [
                          [Circular],
                        ],
                        "editable": false,
                        "elem": null,
                        "kind": "ord",
                        "parent": MatrixAtom {
                          "children": [
                            [
                              [Circular],
                              [Circular],
                            ],
                            [
                              [Circular],
                            ],
                          ],
                          "elem": null,
                          "kind": "inner",
                          "parent": null,
                          "type": "pmatrix",
                        },
                      },
                    },
                    "char": "j",
                    "font": "Math-I",
                    "italic": 0.05724,
                    "multiplier": undefined,
                    "rect": {
                      "depth": 0.19444,
                      "height": 0.65952,
                      "width": 0.46905,
                    },
                    "space": {},
                  },
                ],
                "multiplier": undefined,
                "rect": {
                  "depth": 0.19444,
                  "height": 0.65952,
                  "width": 0.46905,
                },
                "space": {},
              },
              "shift": 0.6099999999999999,
            },
          ],
          "multiplier": undefined,
          "rect": {
            "depth": -0.4155599999999999,
            "height": 1.26952,
            "width": 0.46905,
          },
          "space": {
            "left": 0.5,
          },
        },
      ],
      "multiplier": undefined,
      "rect": {
        "depth": 0.78444,
        "height": 1.26952,
        "width": 1.9071500000000001,
      },
      "space": {
        "bottom": 0.16555999999999993,
        "top": 0.18047999999999997,
      },
    },
    SymBox {
      "atom": SymAtom {
        "char": ")",
        "charBox": true,
        "elem": null,
        "fonts": [
          "Size3",
        ],
        "kind": "open",
        "parent": null,
      },
      "char": ")",
      "font": "Size3",
      "italic": 0,
      "multiplier": undefined,
      "rect": {
        "depth": 0.95003,
        "height": 1.45,
        "width": 0.73611,
      },
      "space": {},
    },
  ],
  "multiplier": undefined,
  "rect": {
    "depth": 0.95003,
    "height": 1.45,
    "width": 3.37937,
  },
  "space": {},
}
`;

exports[`overline atom 1`] = `
VStackBox {
  "align": undefined,
  "atom": OverlineAtom {
    "body": GroupAtom {
      "body": [
        SymAtom {
          "char": "j",
          "charBox": true,
          "elem": null,
          "fonts": [
            "Math-I",
          ],
          "kind": "ord",
          "parent": [Circular],
        },
      ],
      "editable": false,
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
    "elem": null,
    "kind": "ord",
    "parent": null,
  },
  "children": [
    RectBox {
      "atom": undefined,
      "multiplier": undefined,
      "rect": {
        "depth": 0,
        "height": 0.04,
        "width": 0,
      },
      "space": {
        "bottom": 0.12,
        "top": 0.04,
      },
    },
    HBox {
      "atom": GroupAtom {
        "body": [
          SymAtom {
            "char": "j",
            "charBox": true,
            "elem": null,
            "fonts": [
              "Math-I",
            ],
            "kind": "ord",
            "parent": [Circular],
          },
        ],
        "editable": false,
        "elem": null,
        "kind": "ord",
        "parent": OverlineAtom {
          "body": [Circular],
          "elem": null,
          "kind": "ord",
          "parent": null,
        },
      },
      "children": [
        SymBox {
          "atom": SymAtom {
            "char": "j",
            "charBox": true,
            "elem": null,
            "fonts": [
              "Math-I",
            ],
            "kind": "ord",
            "parent": GroupAtom {
              "body": [
                [Circular],
              ],
              "editable": false,
              "elem": null,
              "kind": "ord",
              "parent": OverlineAtom {
                "body": [Circular],
                "elem": null,
                "kind": "ord",
                "parent": null,
              },
            },
          },
          "char": "j",
          "font": "Math-I",
          "italic": 0.05724,
          "multiplier": undefined,
          "rect": {
            "depth": 0.19444,
            "height": 0.65952,
            "width": 0.46905,
          },
          "space": {},
        },
      ],
      "multiplier": undefined,
      "rect": {
        "depth": 0.19444,
        "height": 0.65952,
        "width": 0.46905,
      },
      "space": {},
    },
  ],
  "multiplier": undefined,
  "newDepth": 0.19444,
  "rect": {
    "depth": 0.19444,
    "height": 0.8595200000000001,
    "width": 0.46905,
  },
  "shift": -0,
  "space": {},
}
`;

exports[`sqrt atom 1`] = `
VBox {
  "align": undefined,
  "atom": SqrtAtom {
    "body": GroupAtom {
      "body": [
        SymAtom {
          "char": "j",
          "charBox": true,
          "elem": null,
          "fonts": [
            "Math-I",
          ],
          "kind": "ord",
          "parent": [Circular],
        },
      ],
      "editable": false,
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
    "elem": null,
    "kind": "ord",
    "parent": null,
  },
  "children": [
    {
      "box": SqrtBox {
        "atom": undefined,
        "innerHeight": 1.0417100000000001,
        "multiplier": undefined,
        "rect": {
          "depth": 0.273585,
          "height": 0.926415,
          "width": 1.41905,
        },
        "shift": -0.273585,
        "size": 1,
        "space": {},
      },
      "shift": 0,
    },
    {
      "box": HBox {
        "atom": GroupAtom {
          "body": [
            SymAtom {
              "char": "j",
              "charBox": true,
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": [Circular],
            },
          ],
          "editable": false,
          "elem": null,
          "kind": "ord",
          "parent": SqrtAtom {
            "body": [Circular],
            "elem": null,
            "kind": "ord",
            "parent": null,
          },
        },
        "children": [
          SymBox {
            "atom": SymAtom {
              "char": "j",
              "charBox": true,
              "elem": null,
              "fonts": [
                "Math-I",
              ],
              "kind": "ord",
              "parent": GroupAtom {
                "body": [
                  [Circular],
                ],
                "editable": false,
                "elem": null,
                "kind": "ord",
                "parent": SqrtAtom {
                  "body": [Circular],
                  "elem": null,
                  "kind": "ord",
                  "parent": null,
                },
              },
            },
            "char": "j",
            "font": "Math-I",
            "italic": 0.05724,
            "multiplier": undefined,
            "rect": {
              "depth": 0.19444,
              "height": 0.65952,
              "width": 0.46905,
            },
            "space": {},
          },
        ],
        "multiplier": undefined,
        "rect": {
          "depth": 0.19444,
          "height": 0.65952,
          "width": 0.46905,
        },
        "space": {
          "left": 0.95,
        },
      },
      "shift": 0,
    },
  ],
  "multiplier": undefined,
  "rect": {
    "depth": 0.273585,
    "height": 0.926415,
    "width": 1.8881,
  },
  "space": {},
}
`;

exports[`sqrt atom 2`] = `
VBox {
  "align": undefined,
  "atom": SqrtAtom {
    "body": GroupAtom {
      "body": [],
      "editable": false,
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
    "elem": null,
    "kind": "ord",
    "parent": null,
  },
  "children": [
    {
      "box": SqrtBox {
        "atom": undefined,
        "innerHeight": 0.61875,
        "multiplier": undefined,
        "rect": {
          "depth": 0.19062499999999996,
          "height": 0.8093750000000001,
          "width": 0.777,
        },
        "shift": -0.19062499999999996,
        "size": "small",
        "space": {},
      },
      "shift": 0,
    },
    {
      "box": HBox {
        "atom": GroupAtom {
          "body": [],
          "editable": false,
          "elem": null,
          "kind": "ord",
          "parent": SqrtAtom {
            "body": [Circular],
            "elem": null,
            "kind": "ord",
            "parent": null,
          },
        },
        "children": [],
        "multiplier": undefined,
        "rect": {
          "depth": 0,
          "height": 0,
          "width": 0,
        },
        "space": {
          "left": 0.777,
        },
      },
      "shift": 0,
    },
  ],
  "multiplier": undefined,
  "rect": {
    "depth": 0.19062499999999996,
    "height": 0.8093750000000001,
    "width": 0.777,
  },
  "space": {},
}
`;

exports[`supsub atom 1`] = `
HBox {
  "atom": SupSubAtom {
    "elem": null,
    "kind": "ord",
    "nuc": SymAtom {
      "char": "j",
      "charBox": true,
      "elem": null,
      "fonts": [
        "Math-I",
      ],
      "kind": "ord",
      "parent": GroupAtom {
        "body": [
          [Circular],
        ],
        "editable": false,
        "elem": null,
        "kind": "ord",
        "parent": [Circular],
      },
    },
    "parent": null,
    "sub": GroupAtom {
      "body": [
        SymAtom {
          "char": "j",
          "charBox": true,
          "elem": null,
          "fonts": [
            "Math-I",
          ],
          "kind": "ord",
          "parent": [Circular],
        },
      ],
      "editable": false,
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
    "sup": GroupAtom {
      "body": [
        SymAtom {
          "char": "j",
          "charBox": true,
          "elem": null,
          "fonts": [
            "Math-I",
          ],
          "kind": "ord",
          "parent": [Circular],
        },
      ],
      "editable": false,
      "elem": null,
      "kind": "ord",
      "parent": [Circular],
    },
  },
  "children": [
    SymBox {
      "atom": SymAtom {
        "char": "j",
        "charBox": true,
        "elem": null,
        "fonts": [
          "Math-I",
        ],
        "kind": "ord",
        "parent": GroupAtom {
          "body": [
            [Circular],
          ],
          "editable": false,
          "elem": null,
          "kind": "ord",
          "parent": SupSubAtom {
            "elem": null,
            "kind": "ord",
            "nuc": [Circular],
            "parent": null,
            "sub": [Circular],
            "sup": [Circular],
          },
        },
      },
      "char": "j",
      "font": "Math-I",
      "italic": 0.05724,
      "multiplier": undefined,
      "rect": {
        "depth": 0.19444,
        "height": 0.65952,
        "width": 0.46905,
      },
      "space": {},
    },
    VBox {
      "align": "start",
      "atom": undefined,
      "children": [
        {
          "box": HBox {
            "atom": GroupAtom {
              "body": [
                SymAtom {
                  "char": "j",
                  "charBox": true,
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": [Circular],
                },
              ],
              "editable": false,
              "elem": null,
              "kind": "ord",
              "parent": SupSubAtom {
                "elem": null,
                "kind": "ord",
                "nuc": SymAtom {
                  "char": "j",
                  "charBox": true,
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": [Circular],
                },
                "parent": null,
                "sub": [Circular],
                "sup": [Circular],
              },
            },
            "children": [
              SymBox {
                "atom": SymAtom {
                  "char": "j",
                  "charBox": true,
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": GroupAtom {
                    "body": [
                      [Circular],
                    ],
                    "editable": false,
                    "elem": null,
                    "kind": "ord",
                    "parent": SupSubAtom {
                      "elem": null,
                      "kind": "ord",
                      "nuc": [Circular],
                      "parent": null,
                      "sub": [Circular],
                      "sup": [Circular],
                    },
                  },
                },
                "char": "j",
                "font": "Math-I",
                "italic": 0.05724,
                "multiplier": undefined,
                "rect": {
                  "depth": 0.19444,
                  "height": 0.65952,
                  "width": 0.46905,
                },
                "space": {},
              },
            ],
            "multiplier": 0.7,
            "rect": {
              "depth": 0.13610799999999998,
              "height": 0.46166399999999996,
              "width": 0.328335,
            },
            "space": {
              "right": 0.07142857142857144,
            },
          },
          "shift": 0.48090799999999995,
        },
        {
          "box": HBox {
            "atom": GroupAtom {
              "body": [
                SymAtom {
                  "char": "j",
                  "charBox": true,
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": [Circular],
                },
              ],
              "editable": false,
              "elem": null,
              "kind": "ord",
              "parent": SupSubAtom {
                "elem": null,
                "kind": "ord",
                "nuc": SymAtom {
                  "char": "j",
                  "charBox": true,
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": [Circular],
                },
                "parent": null,
                "sub": [Circular],
                "sup": [Circular],
              },
            },
            "children": [
              SymBox {
                "atom": SymAtom {
                  "char": "j",
                  "charBox": true,
                  "elem": null,
                  "fonts": [
                    "Math-I",
                  ],
                  "kind": "ord",
                  "parent": GroupAtom {
                    "body": [
                      [Circular],
                    ],
                    "editable": false,
                    "elem": null,
                    "kind": "ord",
                    "parent": SupSubAtom {
                      "elem": null,
                      "kind": "ord",
                      "nuc": [Circular],
                      "parent": null,
                      "sub": [Circular],
                      "sup": [Circular],
                    },
                  },
                },
                "char": "j",
                "font": "Math-I",
                "italic": 0.05724,
                "multiplier": undefined,
                "rect": {
                  "depth": 0.19444,
                  "height": 0.65952,
                  "width": 0.46905,
                },
                "space": {},
              },
            ],
            "multiplier": 0.7,
            "rect": {
              "depth": 0.13610799999999998,
              "height": 0.46166399999999996,
              "width": 0.328335,
            },
            "space": {
              "left": -0.08177142857142858,
              "right": 0.07142857142857144,
            },
          },
          "shift": -0.276864,
        },
      ],
      "multiplier": undefined,
      "rect": {
        "depth": 0.412972,
        "height": 0.942572,
        "width": 0.65667,
      },
      "space": {},
    },
  ],
  "multiplier": undefined,
  "rect": {
    "depth": 0.412972,
    "height": 0.942572,
    "width": 1.12572,
  },
  "space": {},
}
`;
